--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       width: 50px;
       background-color: white;
     }
+    #carouselExampleCaptions{
+      aspect-ratio: 16/10; 
+
+
+    }
   </style>
 
 <body>
@@ -55,6 +60,47 @@
   <main class="container-fluid border">
     <section class=" mt-4" id="home">
       <h2 class="mb-4">home</h2>
+      <!-- start carousel -->
+      <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./assets/img/code-1076536_1280.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/img/code-1076536_1280.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/img/code-1076536_1280.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <!-- End carousel -->
+      <h3>What a wonderful mobile world</h3>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos fugiat blanditiis suscipit minima voluptatum
         sint quas voluptas obcaecati, eius eaque esse praesentium, fugit excepturi quisquam officia placeat explicabo
         soluta rerum eum nam? Praesentium, error quis dolorum id unde earum saepe similique provident perferendis
