end of the site

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="#gallery">gallery</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
+        <form class="d-flex" role="search">gi
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
@@ -55,6 +55,7 @@
   <main class="container-fluid border">
     <section class=" mt-4" id="home">
       <h2 class="mb-4">home</h2>
+  
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos fugiat blanditiis suscipit minima voluptatum
         sint quas voluptas obcaecati, eius eaque esse praesentium, fugit excepturi quisquam officia placeat explicabo
         soluta rerum eum nam? Praesentium, error quis dolorum id unde earum saepe similique provident perferendis
