--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <title>Mobile first</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    p{
+    p {
       text-align: justify;
     }
+
     #logo {
       width: 50px;
       background-color: white;
@@ -19,32 +20,32 @@
 <body>
   <header>
     <!-- Debut Navbar -->
-    <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark"> 
+    <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
       <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img id="logo" src="./assets/img/3151589_bubble_chat_geek_message_icon.svg" alt="">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#contact">contact</a>
-          </li>
-          <li class="nav-contact active">
-            <a class="nav-link" href="#gallery">gallery</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">gi
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
+        <a class="navbar-brand" href="#">
+          <img id="logo" src="./assets/img/3151589_bubble_chat_geek_message_icon.svg" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#contact">contact</a>
+            </li>
+            <li class="nav-contact active">
+              <a class="nav-link" href="#gallery">gallery</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">gi
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
       </div>
     </nav>
     </nav>
@@ -55,7 +56,38 @@
   <main class="container-fluid border">
     <section class=" mt-4" id="home">
       <h2 class="mb-4">home</h2>
-  
+      <div id="carouselExampleIndicators" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./assets/img/programming-1873854_1280.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/img/code-820275_1280.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/img/code-1076536_1280.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <h3>what a wonderful mobile !</h3>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos fugiat blanditiis suscipit minima voluptatum
         sint quas voluptas obcaecati, eius eaque esse praesentium, fugit excepturi quisquam officia placeat explicabo
         soluta rerum eum nam? Praesentium, error quis dolorum id unde earum saepe similique provident perferendis
@@ -82,6 +114,7 @@
     </section>
     <section class="mt-4" id="contact">
       <h2>contact</h2>
+      <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.0407054119423!2d4.802765076122501!3d45.77037447108063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eb7391fcf843%3A0xf4170493513eaa9f!2sCCI%20Formation%20Pro%20-%20Lyon!5e0!3m2!1sfr!2sfr!4v1705069886743!5m2!1sfr!2sfr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi deleniti officia accusamus dolor ipsum
         consequuntur commodi sapiente, aspernatur nam similique corrupti aliquid asperiores error nihil autem rem
         recusandae iste rerum mollitia minima maxime odit quae quisquam. Illo, sapiente enim maxime quidem modi est
@@ -94,8 +127,39 @@
         assumenda consequuntur consequatur quis beatae, fuga minima sunt fugit deleniti harum. Ipsum maxime, voluptates
         rerum illo esse ullam est.</p>
     </section>
-    <section class="mt-4" id="gallery">
+
+
+    <section class="mt-4 row" id="gallery">
       <h2>gallery</h2>
+      <div class="col-12 col-md-4 text-center border">
+          <!-- ceci est debut card -->
+        <div class="card">
+          <img src="./assets/img/monitor-1307227_1280.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary bg-dark border black mb-4">Go somewhere</a>
+          </div>
+          <!-- ceci est fin de  card -->
+        </div>
+      </div>
+      <div class="col-12 col-md-4 text-center border">  <div class="card">
+        <img src="./assets/img/computer-1231889_1280.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary bg-dark border black mb-4">Go somewhere</a>
+        </div>
+      </div> </div>
+      <div class="col-12 col-md-4 text-center border"> <div class="card">
+        <img src="./assets/img/ball-63527_1280.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary bg-dark border black mb-4 ">Go somewhere</a>
+        </div>
+      </div> </div>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi repellendus non quia quibusdam laboriosam
         aliquid unde porro animi exercitationem nostrum, ducimus officiis praesentium velit, ad sint sapiente aut odit
         cumque laborum ipsa excepturi vero. Non illo laborum blanditiis, dignissimos amet quae dolores numquam incidunt
